# news

./: .gitignore  README.md  app  com.github.manexim.news.yml  meson.build
.github/workflows/: ci.yml  main.yml
data/: com.github.manexim.news.appdata.xml  com.github.manexim.news.appdata.xml.in  com.github.manexim.news.desktop  com.github.manexim.news.gresource.xml  com.github.manexim.news.gschema.xml  meson.build
data/styles/: application.css
debian/: changelog  control  copyright  rules
po/: LINGUAS  POTFILES  com.github.manexim.news.pot  de.po  es.po  fr.po  pt.po
po/extra/: LINGUAS  POTFILES  de.po  es.po  extra.pot  fr.po  pt.po
src/: Application.vala  Constants.vala.in  MainWindow.vala  meson.build
src/Actions/: ActionType.vala  Actions.vala  Payload.vala
src/Config/: Constants.vala
src/Controllers/: ArticleController.vala  FeedController.vala  WebsiteController.vala
src/Middlewares/: FeedMiddleware.vala  LoggingMiddleware.vala
src/Models/: Article.vala  Feed.vala  Website.vala
src/Services/: ImageCache.vala  Settings.vala  Sources.vala
src/Store/: Store.vala
src/Utilities/: DateTime.vala  History.vala  URL.vala
src/Views/: ArticlePreview.vala  ArticleView.vala  FeedView.vala  LoadingView.vala  MainView.vala  SourcesView.vala
src/Widgets/: ArticleCarousel.vala  ArticleCarouselItem.vala  ArticleRow.vala  Image.vala  SourceCarousel.vala  SourceCarouselItem.vala
subprojects/: flux.wrap
